# kenku

./: .coverage  .gitignore  README.md  coverage.lcov  embeddings_sections.ipynb  pyproject.toml  search.ipynb
notebooks/: ask_gpt.ipynb  embeddings.ipynb  search.ipynb  split_markdown.ipynb
src/kenku/: embeddings.py  main.py  markdown.py
src/kenku/core/: chatgpt.py  embeddings.py  markdown.py  utils.py
tests/: conftest.py  test_embeddings.py  test_markdown.py  test_openai.py  test_section.py
