[tool.poetry]
name = "kenku"
version = "0.1.0"
description = "A toolkit for notetaking and writing with GPT."
authors = ["Sooty Owl "]
readme = "README.md"
packages = [{include = "kenku", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^0.27.1"
ipykernel = "^6.21.3"
pandas = "^1.5.3"
numpy = "^1.24.2"
tiktoken = "^0.3.0"
matplotlib = "^3.7.1"
plotly = "^5.13.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
transformers = "^4.26.1"
python-dotenv = "^1.0.0"
pandarallel = "^1.6.4"
line-profiler = "^4.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
ipywidgets = "^8.0.4"
jupyter-contrib-nbextensions = "^0.7.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
